--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"dependencies": {
+		"@supabase/supabase-js": "^2.43.1",
 		"discord.js": "^14.15.2",
 		"dotenv": "^16.4.5",
 		"tsx": "^4.9.2",
