--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
 	"dependencies": {
 		"discord.js": "^14.15.2",
+		"@discordjs/voice": "^0.16.0",
+		"@discordjs/opus": "^0.8.0",
 		"dotenv": "^16.4.5",
 		"tsx": "^4.9.2",
-		"typescript": "^5.4.5"
+		"typescript": "^5.4.5",
+		"libsodium-wrappers": "^0.7.9"
 	}
 }
