--- a/package.json
+++ b/package.json
@@ -1,7 +1,24 @@
 {
+  "name": "joshs-special-bot",
+  "author": "",
+	"private": true,
+	"license": "UNLICENSED",
+	"url": "https://github.com/joshs-special-organization/joshs-special-bot",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/joshs-special-organization/joshs-special-bot.git"
+	},
+  "version": "0.1.0",
+  "description": "",
+  "main": "bot.ts",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsx ./src/bot.ts"
+  },
 	"dependencies": {
 		"discord.js": "^14.15.2",
 		"dotenv": "^16.4.5",
+    "@types/node": "^13.11.1",
 		"tsx": "^4.9.2",
 		"typescript": "^5.4.5"
 	}
