--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "description": "",
   "main": "bot.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "tsx ./src/bot.ts"
   },
 	"dependencies": {
@@ -21,5 +21,9 @@
     "@types/node": "^13.11.1",
 		"tsx": "^4.9.2",
 		"typescript": "^5.4.5"
-	}
+	},
+  "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0"
+  }
 }
