--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Build Docker images
-      run: docker-compose build ci
+      run: docker-compose build ci --no-cache
 
     - name: Run tests
       run: docker-compose run ci
