--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "discord.js": "^14.15.2",
     "dotenv": "^16.4.5",
     "tsx": "^4.9.2",
-    "typescript": "^5.4.5",
-    "@types/jest": "^29.5.12",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.2"
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "libsodium-wrappers": "^0.7.9",
     "prisma": "^5.13.0"
   }
