--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: npm test
+    command: sh -c "pnpm install && npm test"
     volumes:
       - .:/app
     working_dir: /app
@@ -14,7 +14,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: npm start
+    command: sh -c "pnpm install --prod && npm start"
     volumes:
       - .:/app
     working_dir: /app
