--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
+    "jest-cli": "^29.7.0",
     "libsodium-wrappers": "^0.7.9",
-    "prisma": "^5.13.0"
+    "prisma": "^5.13.0",
+    "ts-jest": "^29.1.2"
   }
 }
