--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: sh -c "pnpm install && npm test"
+    command: npm test
     volumes:
       - .:/app
     working_dir: /app
