--- a/package.json
+++ b/package.json
@@ -13,7 +13,23 @@
   "main": "bot.ts",
   "scripts": {
     "test": "jest",
-    "start": "tsx ./src/bot.ts"
+    "start": "tsx ./src/bot.ts",
+    "lint": "eslint ./",
+    "format": "prettier --check ./",
+    "format:fix": "prettier --write ./"
+  },
+  "lint-staged": {
+    "src/**/*.{js,ts,tsx}": [
+      "eslint --ext .tsx --ext .ts --ext .ks ./src --fix"
+    ],
+    "./src/**": [
+      "prettier --write ."
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "dependencies": {
     "@discordjs/opus": "^0.8.0",
@@ -27,11 +43,19 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@eslint/js": "^9.2.0",
     "@types/jest": "^29.5.12",
+    "eslint": "^9.2.0",
+    "eslint-plugin-functional": "^6.5.1",
+    "globals": "^15.2.0",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
     "libsodium-wrappers": "^0.7.9",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
     "prisma": "^5.13.0",
-    "ts-jest": "^29.1.2"
+    "ts-jest": "^29.1.2",
+    "typescript-eslint": "^7.8.0"
   }
 }
