--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "main": "bot.ts",
   "scripts": {
     "test": "jest",
-    "start": "tsx ./src/bot.ts"
+    "start": "tsx ./src/bot.ts",
+    "format": "prettier ./ --write",
+    "format:check": "prettier ./ --check"
   },
   "dependencies": {
     "@discordjs/opus": "^0.8.0",
@@ -31,6 +33,8 @@
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
     "libsodium-wrappers": "^0.7.9",
+    "prettier": "^3.2.5",
+    "prettier-plugin-organize-imports": "^3.2.4",
     "prisma": "^5.13.0",
     "ts-jest": "^29.1.2"
   }
