--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test": "jest",
     "start": "tsx ./src/bot.ts",
     "format": "prettier ./ --write",
-    "format:check": "prettier ./ --check"
+    "format:check": "prettier ./ --check",
+    "prepare": "husky"
   },
   "dependencies": {
     "@discordjs/opus": "^0.8.0",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
     "libsodium-wrappers": "^0.7.9",
