--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: sh -c "pnpm install --prod && npm start"
+    command: sh -c "pnpm install --prod --ignore-scripts && pnpm prisma generate && pnpm run start"
     volumes:
       - .:/app
     working_dir: /app
