--- a/.mergify.yml
+++ b/.mergify.yml
@@ -16,5 +16,5 @@ pull_request_rules:
     actions:
       comment:
         message: >
-          👋 {{author}} your PR is conflicting and needs to be updated to be
+          Oi, {{author}} your PR is conflicting and needs to be updated to be
           merged
