--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,11 +22,11 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Build Docker images
-      run: docker-compose build --no-cache ci
+      run: docker compose build --no-cache ci
 
     - name: Install Node modules
-      run: docker-compose run ci sh -c "pnpm install"
+      run: docker compose run ci sh -c "pnpm install"
 
     - name: Run tests
-      run: docker-compose run ci
+      run: docker compose run ci
 
